# LGM5770_SDK

./: CMakeLists.txt  Readme.md  install_deps.sh
Bindings/CPP/: LGM5770Ucpp.cpp  LGM5770Ucpp.h
Bindings/Python/: lgm5770u.py
LGM5770U/: LGM5770U.h
LGM5770U_swig/: CMakeLists.txt  lgm5770u.i
samples/CPP/: CMakeLists.txt
samples/CPP/auto_read/: CMakeLists.txt  main.cpp
samples/CPP/auto_read_cpp/: CMakeLists.txt  main.cpp
samples/CPP/multi_readers_multithreaded/: CMakeLists.txt  main.cpp
samples/CPP/multi_readers_multithreaded_cpp/: CMakeLists.txt  main.cpp
samples/Python/: .gitignore
samples/Python/auto_read/: auto_read-multiple_readers.py  auto_read.py
